--- a/OneDrive/Bureau/waksoccer/package.json
+++ b/OneDrive/Bureau/waksoccer/package.json
@@ -9,6 +9,11 @@
     "lint": "pnpm -r lint",
     "format": "prettier -w ."
   },
+  "dependencies": {
+    "next": "14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
+  },
   "devDependencies": {
     "prettier": "^3.3.3",
     "typescript": "^5.6.2"
