--- a/OneDrive/Bureau/waksoccer/vercel.json
+++ b/OneDrive/Bureau/waksoccer/vercel.json
@@ -1,6 +1,21 @@
 {
+  "version": 2,
+  "builds": [
+    {
+      "src": "apps/web/package.json",
+      "use": "@vercel/next@latest",
+      "config": {
+        "distDir": ".next"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "apps/web/$1"
+    }
+  ],
+  "installCommand": "cd apps/web && npm install",
   "buildCommand": "cd apps/web && npm run build",
-  "outputDirectory": "apps/web/.next",
-  "installCommand": "npm install",
-  "framework": "nextjs"
+  "outputDirectory": "apps/web/.next"
 }
