--- a/OneDrive/Bureau/waksoccer/vercel.json
+++ b/OneDrive/Bureau/waksoccer/vercel.json
@@ -1,7 +1,5 @@
 {
-  "version": 2,
   "installCommand": "cd apps/web && npm install",
   "buildCommand": "cd apps/web && npm run build",
-  "outputDirectory": "apps/web/.next",
-  "framework": "nextjs"
+  "outputDirectory": "apps/web/.next"
 }
