--- a/OneDrive/Bureau/waksoccer/vercel.json
+++ b/OneDrive/Bureau/waksoccer/vercel.json
@@ -2,5 +2,6 @@
   "version": 2,
   "buildCommand": "cd apps/web && npm run build",
   "outputDirectory": "apps/web/.next",
-  "installCommand": "cd apps/web && npm install"
+  "installCommand": "cd apps/web && npm install",
+  "framework": "nextjs"
 }
